# QuestionBankLLM

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: topic_notes.json  topics.json
src/: chat_cli.py  question_ai.py  webapp.py
src/questionbankllm/: __init__.py  chat_cli.py  question_ai.py  webapp.py
src/questionbankllm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/templates/: index.html
templates/: index.html
