[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "questionbankllm"
version = "0.1.0"
description = "QuestionBankLLM - chemistry question parser and topic matcher"
requires-python = ">=3.9"
dependencies = ["Flask>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]
